<resources>
    <string name="app_name">BakingApp</string>
    <string name="cheesecake">Cheesecake</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="choose_your_dish">CHOOSE YOUR DISH</string>
    <string name="nutella_pie">Nutella Pie</string>
    <string name="brownies">Brownies</string>
    <string name="yellow_cake">Yellow Cake</string>
    <string name="test">TEST</string>
    <string name="recipe">Recipe Ingredients</string>
    <string name="movies_categories_key">categoriesKey</string>
    <string name="action_settings">Settings</string>
    <string name="fav_dish_title">Dish to be displayed in Widget</string>
    <string name="select_fav_dish">Select Favourite Dish</string>
    <string name="address">https://d17h27t6h515a5.cloudfront.net/topher/2017/May/59121517_baking/baking.json</string>
    <string name="recipe_cards">Recipe Cards</string>
    <string name="select_a_step">Select a step</string>

</resources>
